[package]
name = "clients"
version = "0.1.0"
authors = ["staszewski <kamilstaszewski95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] } 
